# lmsy_w2v_rfs

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
concepts/scoring/: index.html
concepts/two-phase-preprocessing/: index.html
concepts/word2vec-dictionary/: index.html
docs/: index.md
docs/concepts/: scoring.md  two-phase-preprocessing.md  word2vec-dictionary.md
docs/explanation/: design-decisions.md  mwe-comparison.md  troubleshooting.md
docs/how-to/: aggregate-firm-year.md  install-corenlp.md  load-documents.md  resume-after-crash.md  run-from-cli.md  run-on-hpc.md  switch-preprocessor.md  troubleshooting.md  use-your-own-seeds.md  whiten-scores.md
docs/reference/: cli.md  config.md  dictionary.md  pipeline.md  preprocessors.md  scoring.md  seeds.md  w2v.md
explanation/design-decisions/: index.html
explanation/mwe-comparison/: index.html
how-to/aggregate-firm-year/: index.html
how-to/install-corenlp/: index.html
how-to/load-documents/: index.html
how-to/resume-after-crash/: index.html
how-to/run-from-cli/: index.html
how-to/run-on-hpc/: index.html
how-to/switch-preprocessor/: index.html
how-to/troubleshooting/: index.html
how-to/use-your-own-seeds/: index.html
how-to/whiten-scores/: index.html
notebooks/: 01_quickstart.py  01_quickstart_colab.ipynb
reference/cli/: index.html
reference/config/: index.html
reference/dictionary/: index.html
reference/pipeline/: index.html
reference/preprocessors/: index.html
reference/scoring/: index.html
reference/seeds/: index.html
reference/w2v/: index.html
search/: search_index.json
src/lmsy_w2v_rfs/: __init__.py  cleaner.py  cli.py  config.py  dictionary.py  phrases.py  pipeline.py  scoring.py  w2v.py
src/lmsy_w2v_rfs/data/: mwes_finance.txt  seeds_culture.json  stopwords_sraf.txt
src/lmsy_w2v_rfs/preprocessors/: __init__.py  base.py  corenlp_pp.py  none_pp.py  spacy_pp.py  stanza_pp.py  static_mwe.py
tests/: conftest.py  test_cleaner.py  test_config.py  test_dictionary.py  test_loaders.py  test_pipeline.py  test_preprocessors.py  test_scoring.py  test_zca.py
