[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmsy_w2v_rfs"
version = "0.1.2"
description = "Word-embedding seed expansion and document scoring. Bring your own seeds. Originally Li, Mai, Shen, Yan (2021, RFS)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Feng Mai", email = "feng-mai@uiowa.edu" },
]
keywords = [
    "word2vec",
    "gensim",
    "culture",
    "nlp",
    "corenlp",
    "finance",
    "text-as-data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "gensim>=4.3,<5",
    "numpy>=1.24,<3",
    "pandas>=2,<3",
    "scikit-learn>=1.3,<2",
    "tqdm>=4.66,<5",
    "smart_open>=6,<8",
    "nltk>=3.8,<4",
]

[project.optional-dependencies]
spacy = [
    "spacy>=3.7,<4",
]
stanza = [
    "stanza>=1.8,<2",
    "protobuf>=4",
]
corenlp = [
    "stanza>=1.8,<2",
    "protobuf>=4",
]
all = [
    "spacy>=3.7,<4",
    "stanza>=1.8,<2",
    "protobuf>=4",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "jupytext>=1.16",
]

[project.scripts]
lmsy-w2v-rfs = "lmsy_w2v_rfs.cli:main"

[project.urls]
Paper = "https://doi.org/10.1093/rfs/hhaa079"
Repository = "https://github.com/maifeng/lmsy_w2v_rfs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lmsy_w2v_rfs" = ["data/*.json", "data/*.txt", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "corenlp: tests that require the CoreNLP extra and Java. Skipped by default.",
    "slow: tests that take more than a few seconds.",
]
